[gd_scene load_steps=5 format=3 uid="uid://f1uu3g402k0a"]

[ext_resource type="Script" uid="uid://btaml0sd4au1" path="res://Scripts/confirmation_modal.gd" id="1_8lh41"]
[ext_resource type="Texture2D" uid="uid://dj8ooewn83u0g" path="res://world/UI/Sprite sheet for Basic Pack.png" id="2_2tu6q"]
[ext_resource type="Theme" uid="uid://bt207frt53wfd" path="res://world/UI/Confirmation.tres" id="3_0fdag"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0fdag"]
atlas = ExtResource("2_2tu6q")
region = Rect2(275, 212, 90, 25)

[node name="ConfirmationModal" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8lh41")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.258824, 0.258824, 0.258824, 0.776471)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -83.0
offset_right = 220.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_0fdag")
region_rect = Rect2(0, 0, 90, 25)
patch_margin_left = 5
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.5
offset_top = -77.0
offset_right = 215.5
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_0fdag")
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderLabel" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 2
text = "ARE YOU SURE?"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MessageLabel" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 2
text = "Message body here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Confirm" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Confirm"

[node name="Cancel" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Cancel"

[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
